--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -2,7 +2,9 @@
 <html>
   <body>
     <script>
-      console.log();
+      const html = document.documentElement;
+
+      console.log(html.clientHeight);
     </script>
     <script src="index.js"></script>
   </body>
