--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -4,7 +4,7 @@
     <script>
       const html = document.documentElement;
 
-      console.log(html.clientHeight);
+      console.log("clientHeigt", html.clientHeight);
     </script>
     <script src="index.js"></script>
   </body>
