--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -5,6 +5,7 @@
       const html = document.documentElement;
 
       console.log("clientHeigt", html.clientHeight);
+      console.log("clientWidth", html.clientWidth);
     </script>
     <script src="index.js"></script>
   </body>
