--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -6,6 +6,8 @@
 
       console.log("clientHeigt", html.clientHeight);
       console.log("clientWidth", html.clientWidth);
+
+      console.log("using window height", window.innerHeight);
     </script>
     <script src="index.js"></script>
   </body>
