--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -7,7 +7,8 @@
       console.log("clientHeigt", html.clientHeight);
       console.log("clientWidth", html.clientWidth);
 
-      console.log("using window height", window.innerHeight);
+      console.log("using window innerHeight", window.innerHeight);
+      console.log("using window innerWidth", window.innerWidth);
     </script>
     <script src="index.js"></script>
   </body>
