--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
@@ -31,5 +31,11 @@
     </script>
 
     <script src="index.js"></script>
+
+    <script>
+      console.log("::");
+      console.log(example.clientWidth, example.scrollWidth);
+      console.log(example.clientHeight, example.scrollHeight);
+    </script>
   </body>
 </html>
