--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
@@ -32,10 +32,10 @@
 
     <script src="index.js"></script>
 
-    <script>
+    <!-- <script>
       console.log("::");
       console.log(example.clientWidth, example.scrollWidth);
       console.log(example.clientHeight, example.scrollHeight);
-    </script>
+    </script> -->
   </body>
 </html>
