--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
@@ -26,8 +26,8 @@
     </div>
     <script>
       const example = document.getElementById("example");
-      console.log("clientTop", example.clientTop);
-      console.log("clientLeft", example.clientLeft);
+      console.log("clientTop::", example.clientTop);
+      console.log("clientLeft::", example.clientLeft);
     </script>
 
     <script src="index.js"></script>
