--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -4,6 +4,7 @@
     <script>
       const html = document.documentElement;
 
+      console.log("html geometry properties");
       console.log("clientHeigt", html.clientHeight);
       console.log("clientWidth", html.clientWidth);
 
