--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -10,6 +10,8 @@
 
       console.log("using window innerHeight", window.innerHeight);
       console.log("using window innerWidth", window.innerWidth);
+
+      console.log("document geometry properties");
     </script>
     <script src="index.js"></script>
   </body>
