--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -12,6 +12,10 @@
       console.log("using window innerWidth", window.innerWidth);
 
       console.log("document geometry properties");
+      console.log(
+        document.body.offsetWidth,
+        document.documentElement.offsetWidth
+      );
     </script>
     <script src="index.js"></script>
   </body>
