--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -14,7 +14,8 @@
       console.log("document geometry properties");
       console.log(
         document.body.offsetWidth,
-        document.documentElement.offsetWidth
+        document.body.clientWidth,
+        document.body.scrollWidth
       );
     </script>
     <script src="index.js"></script>
