--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -17,6 +17,11 @@
         document.body.clientWidth,
         document.body.scrollWidth
       );
+      console.log(
+        document.documentElement.offsetWidth,
+        document.documentElement.clientWidth,
+        document.documentElement.scrollWidth
+      );
     </script>
     <script src="index.js"></script>
   </body>
