--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <h1>Hello, world!</h1>
     <script>
       const html = document.documentElement;
 
@@ -21,6 +22,12 @@
         document.documentElement.offsetWidth,
         document.documentElement.clientWidth,
         document.documentElement.scrollWidth
+      );
+
+      console.log(
+        document.body.offsetHeight,
+        document.body.clientHeight,
+        document.body.scrollHeight
       );
     </script>
     <script src="index.js"></script>
