--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -29,6 +29,11 @@
         document.body.clientHeight,
         document.body.scrollHeight
       );
+      console.log(
+        document.documentElement.offsetHeight,
+        document.documentElement.clientHeight,
+        document.documentElement.scrollHeight
+      );
     </script>
     <script src="index.js"></script>
   </body>
