--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/index.html
@@ -34,6 +34,9 @@
         document.documentElement.clientHeight,
         document.documentElement.scrollHeight
       );
+
+      const scrollWidth = Math.max(document.body.offsetWidth);
+      console.log(scrollWidth);
     </script>
     <script src="index.js"></script>
   </body>
