--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
@@ -7,5 +7,77 @@
       beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
       modi alias, animi quibusdam ut excepturi!
     </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
   </body>
 </html>
