--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
@@ -83,8 +83,11 @@
     <script>
       function showScrollTop() {
         // Did not work
-        const body = document.body;
-        console.log("scrollTop", body.scrollTop);
+        // const body = document.body;
+        // console.log("scrollTop from body", body.scrollTop);
+
+        const html = document.documentElement;
+        console.log("scrollTop form html", html.scrollTop);
       }
     </script>
   </body>
