--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
@@ -86,8 +86,12 @@
         // const body = document.body;
         // console.log("scrollTop from body", body.scrollTop);
 
+        // But this work
         const html = document.documentElement;
-        console.log("scrollTop form html", html.scrollTop);
+
+        // Or this
+        const pageYOffset = window.pageYOffset;
+        console.log("scrollTop form html", html.scrollTop, pageYOffset);
       }
     </script>
   </body>
