--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
@@ -91,7 +91,9 @@
 
         // Or this
         const pageYOffset = window.pageYOffset;
+        const pageXOffset = window.pageXOffset;
         console.log("scrollTop form html", html.scrollTop, pageYOffset);
+        console.log("scrollLeft", html.scrollLeft, pageXOffset);
       }
     </script>
   </body>
