--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
@@ -92,8 +92,17 @@
         // Or this
         const pageYOffset = window.pageYOffset;
         const pageXOffset = window.pageXOffset;
-        console.log("scrollTop form html", html.scrollTop, pageYOffset);
-        console.log("scrollLeft", html.scrollLeft, pageXOffset);
+
+        // Or this
+        // Also available as window properties scrollX and scrollY
+        const scrollY = window.scrollY;
+        console.log(
+          "scrollTop form html",
+          html.scrollTop,
+          pageYOffset,
+          scrollY
+        );
+        // console.log("scrollLeft", html.scrollLeft, pageXOffset);
       }
     </script>
   </body>
