--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/get-the-current-scroll.html
@@ -96,13 +96,15 @@
         // Or this
         // Also available as window properties scrollX and scrollY
         const scrollY = window.scrollY;
+        const scrollX = window.scrollX;
         console.log(
           "scrollTop form html",
           html.scrollTop,
           pageYOffset,
           scrollY
         );
-        // console.log("scrollLeft", html.scrollLeft, pageXOffset);
+
+        console.log("scrollLeft", html.scrollLeft, pageXOffset, scrollX);
       }
     </script>
   </body>
