--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -3,6 +3,8 @@
   <body>
     <script>
       // To scroll the page with JavaScript, its DOM must be fully built.
+
+      // For instance, if we try to scroll the page with a script in <head>, it won’t work.
     </script>
   </body>
 </html>
