--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -5,6 +5,8 @@
       // To scroll the page with JavaScript, its DOM must be fully built.
 
       // For instance, if we try to scroll the page with a script in <head>, it won’t work.
+
+      // Regular elements can be scrolled by changing scrollTop/scrollLeft.
     </script>
   </body>
 </html>
