--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -11,6 +11,9 @@
       // We can do the same for the page using document.documentElement.
       // scrollTop/scrollLeft (except Safari, where document.body.
       // scrollTop/Left should be used instead).
+
+      // Alternatively, there’s a simpler, universal solution: special
+      // methods window.scrollBy(x,y) and window.scrollTo(pageX,pageY).
     </script>
   </body>
 </html>
