--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -14,6 +14,10 @@
 
       // Alternatively, there’s a simpler, universal solution: special
       // methods window.scrollBy(x,y) and window.scrollTo(pageX,pageY).
+
+      // The method scrollBy(x,y) scrolls the page relative to its
+      // current position. For instance, scrollBy(0,10) scrolls the page
+      // 10px down.
     </script>
   </body>
 </html>
