--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -1,6 +1,85 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      debitis reprehenderit accusantium commodi blanditiis ducimus numquam
+      beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
+      modi alias, animi quibusdam ut excepturi!
+    </p>
+
     <script>
       // To scroll the page with JavaScript, its DOM must be fully built.
 
