--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -31,6 +31,12 @@
       beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
       modi alias, animi quibusdam ut excepturi!
     </p>
+    <button
+      type="button"
+      onclick="scroll10pxDown()"
+    >
+      window.scrollBy(0, 10)
+    </button>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
       debitis reprehenderit accusantium commodi blanditiis ducimus numquam
@@ -97,6 +103,9 @@
       // The method scrollBy(x,y) scrolls the page relative to its
       // current position. For instance, scrollBy(0,10) scrolls the page
       // 10px down.
+      function scroll10pxDown() {
+        window.scrollBy(0, 10);
+      }
     </script>
   </body>
 </html>
