--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -106,6 +106,11 @@
       function scroll10pxDown() {
         window.scrollBy(0, 10);
       }
+
+      // The method scrollTo(pageX,pageY) scrolls the page to absolute
+      // coordinates, so that the top-left corner of the visible part has
+      // coordinates (pageX, pageY) relative to the document’s top-left
+      // corner. It’s like setting scrollLeft/scrollTop.
     </script>
   </body>
 </html>
