--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -119,7 +119,9 @@
       // corner. It’s like setting scrollLeft/scrollTop.
 
       // To scroll to the very beginning, we can use scrollTo(0,0).
-      function scrollToTheBeginning() {}
+      function scrollToTheBeginning() {
+        window.scrollTo(0, 0);
+      }
     </script>
   </body>
 </html>
