--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -122,6 +122,8 @@
       function scrollToTheBeginning() {
         window.scrollTo(0, 0);
       }
+
+      // These methods work for all browsers the same way.
     </script>
   </body>
 </html>
