--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -124,6 +124,9 @@
       }
 
       // These methods work for all browsers the same way.
+
+      // The call to elem.scrollIntoView(top) scrolls the page to make
+      // elem visible. It has one argument:
     </script>
   </body>
 </html>
