--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -127,6 +127,10 @@
 
       // The call to elem.scrollIntoView(top) scrolls the page to make
       // elem visible. It has one argument:
+
+      // If top=true (that’s the default), then the page will be scrolled
+      // to make elem appear on the top of the window. The upper edge of
+      // the element will be aligned with the window top.
     </script>
   </body>
 </html>
