--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -151,6 +151,11 @@
       function moveToTop(elem) {
         elem.scrollIntoView();
       }
+
+      // If top=false, then the page scrolls to make elem appear at the
+      // bottom. The bottom edge of the element will be aligned with the
+      // window bottom.
+      function moveToBottom(elem) {}
     </script>
   </body>
 </html>
