--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -19,6 +19,12 @@
       beatae consectetur dolores porro temporibus maxime, tempore necessitatibus
       modi alias, animi quibusdam ut excepturi!
     </p>
+    <button
+      type="button"
+      onclick="disableScroll()"
+    >
+      document.body.style.overflow = `hidden`
+    </button>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
       debitis reprehenderit accusantium commodi blanditiis ducimus numquam
