--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -169,7 +169,9 @@
       // body.style.overflow = "hidden". The page will “freeze” at its
       // current scroll position.
 
-      function disableScroll() {}
+      function disableScroll() {
+        document.body.style.overflow = "hidden";
+      }
     </script>
   </body>
 </html>
