--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -181,7 +181,9 @@
         document.body.style.overflow = "hidden";
       }
 
-      function enableScroll() {}
+      function enableScroll() {
+        document.body.style.overflow = "";
+      }
 
       // We can use the same technique to freeze the scroll for other
       // elements, not just for document.body.
