--- a/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
+++ b/part-2-browser-document-events-interfaces/document/window-sizes-and-scrolling/scrolling-scrollTo-scrollBy-scrollIntoView.html
@@ -186,7 +186,7 @@
       }
 
       // We can use the same technique to freeze the scroll for other
-      // elements, not just for document.body.
+      // elements, not just for document.body
     </script>
   </body>
 </html>
