--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Hello world</h1>
+    <h1>Element Coordinate: getBoundingClientRect</h1>
   </body>
 </html>
