--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -2,5 +2,10 @@
 <html>
   <body>
     <h1>Element Coordinate: getBoundingClientRect</h1>
+
+    <script>
+      const h1 = document.querySelector("h1");
+      console.log(h1);
+    </script>
   </body>
 </html>
