--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      h1 {
+        margin: 0;
+      }
+    </style>
+  </head>
   <body>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
+      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
+      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
+      reiciendis!
+    </p>
+
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
+      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
+      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
+      reiciendis!
+    </p>
     <h1>Element Coordinate: getBoundingClientRect</h1>
 
     <script>
       const h1 = document.querySelector("h1");
-      console.log(h1);
+      console.log(h1.getBoundingClientRect());
     </script>
   </body>
 </html>
