--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -8,6 +8,8 @@
     </style>
   </head>
   <body>
+    <h1>Element Coordinate: getBoundingClientRect</h1>
+
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
       quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
@@ -21,7 +23,32 @@
       voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
       reiciendis!
     </p>
-    <h1>Element Coordinate: getBoundingClientRect</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
+      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
+      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
+      reiciendis!
+    </p>
+
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
+      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
+      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
+      reiciendis!
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
+      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
+      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
+      reiciendis!
+    </p>
+
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
+      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
+      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
+      reiciendis!
+    </p>
 
     <script>
       const h1 = document.querySelector("h1");
