--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -50,6 +50,8 @@
       reiciendis!
     </p>
 
+    <h2>elementFromPoint(x, y)</h2>
+
     <script>
       const h1 = document.querySelector("h1");
       console.log(h1.getBoundingClientRect());
