--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -53,6 +53,12 @@
     <h2>elementFromPoint(x, y)</h2>
 
     <script>
+      const centerX = document.documentElement.clientWidth / 2;
+      const centerY = document.documentElement.clientHeight / 2;
+      console.log(centerX, centerY);
+    </script>
+
+    <script>
       const h1 = document.querySelector("h1");
       console.log(h1.getBoundingClientRect());
     </script>
