--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -10,45 +10,59 @@
   <body>
     <h1>Element Coordinate: getBoundingClientRect</h1>
 
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
-      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
-      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
-      reiciendis!
-    </p>
+    <div>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        distinctio quam sint tenetur et. Odit labore unde delectus quisquam
+        deleniti sint voluptatibus modi? Unde doloribus molestiae quisquam enim.
+        Dolorem, reiciendis!
+      </p>
+    </div>
 
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
-      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
-      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
-      reiciendis!
-    </p>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
-      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
-      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
-      reiciendis!
-    </p>
+    <div>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        distinctio quam sint tenetur et. Odit labore unde delectus quisquam
+        deleniti sint voluptatibus modi? Unde doloribus molestiae quisquam enim.
+        Dolorem, reiciendis!
+      </p>
+    </div>
 
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
-      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
-      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
-      reiciendis!
-    </p>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
-      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
-      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
-      reiciendis!
-    </p>
+    <div>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        distinctio quam sint tenetur et. Odit labore unde delectus quisquam
+        deleniti sint voluptatibus modi? Unde doloribus molestiae quisquam enim.
+        Dolorem, reiciendis!
+      </p>
+    </div>
 
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio
-      quam sint tenetur et. Odit labore unde delectus quisquam deleniti sint
-      voluptatibus modi? Unde doloribus molestiae quisquam enim. Dolorem,
-      reiciendis!
-    </p>
+    <div>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        distinctio quam sint tenetur et. Odit labore unde delectus quisquam
+        deleniti sint voluptatibus modi? Unde doloribus molestiae quisquam enim.
+        Dolorem, reiciendis!
+      </p>
+    </div>
+
+    <div>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        distinctio quam sint tenetur et. Odit labore unde delectus quisquam
+        deleniti sint voluptatibus modi? Unde doloribus molestiae quisquam enim.
+        Dolorem, reiciendis!
+      </p>
+    </div>
+
+    <div>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        distinctio quam sint tenetur et. Odit labore unde delectus quisquam
+        deleniti sint voluptatibus modi? Unde doloribus molestiae quisquam enim.
+        Dolorem, reiciendis!
+      </p>
+    </div>
 
     <h2>elementFromPoint(x, y)</h2>
 
