--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -71,6 +71,7 @@
       const centerY = document.documentElement.clientHeight / 2;
 
       const elem = document.elementFromPoint(centerX, centerY);
+      elem.style.cssText = "color: white; background: red; padding: 10px";
       console.log(elem);
     </script>
 
