--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -66,6 +66,8 @@
 
     <h2>elementFromPoint(x, y)</h2>
 
+    <h2>Using for "fixed" positioning</h2>
+
     <script>
       const centerX = document.documentElement.clientWidth / 2;
       const centerY = document.documentElement.clientHeight / 2;
