--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div>
-      <p>
+      <p id="coords-show-mark">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
         distinctio quam sint tenetur et. Odit labore unde delectus quisquam
         deleniti sint voluptatibus modi? Unde doloribus molestiae quisquam enim.
@@ -67,6 +67,11 @@
     <h2>elementFromPoint(x, y)</h2>
 
     <h2>Using for "fixed" positioning</h2>
+
+    <script>
+      const elem3 = document.getElementById("coords-show-mark");
+      console.log(elem3);
+    </script>
 
     <script>
       const centerX = document.documentElement.clientWidth / 2;
