--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -70,6 +70,9 @@
 
     <script>
       const elem3 = document.getElementById("coords-show-mark");
+
+      function createMessageUnder(elem, html) {}
+
       console.log(elem3);
     </script>
 
