--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -71,7 +71,11 @@
     <script>
       const elem3 = document.getElementById("coords-show-mark");
 
-      function createMessageUnder(elem, html) {}
+      function createMessageUnder(elem, html) {
+        // create message element
+        const elem = document.createElement("div");
+        // better to use a css class for the style here
+      }
 
       console.log(elem3);
     </script>
